--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ test2.py
 test_image.py
 test_scales.py
 wider_face_dataset.py
+output
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
