--- a/.gitignore
+++ b/.gitignore
@@ -39,11 +39,13 @@ test_image.py
 test_scales.py
 wider_face_dataset.py
 output
+.idea/
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
+*.specc
 
 # Installer logs
 pip-log.txt
